Compiler/y.output
Nonterminals useless in grammar

    Comparator


Terminals unused in grammar

    tSTRING


Rules useless in grammar

   81 Comparator: tINF
   82           | tSUP
   83           | tEQEQ


Grammar

    0 $accept: Program $end

    1 Program: Main Functions

    2 Main: tVOID tMAIN tPO tPF tAO Body tAF

    3 Functions: Function
    4          | Function Functions

    5 $@1: %empty

    6 Function: tINT tID tPO DecArgs tPF tAO $@1 Body Return tAF

    7 $@2: %empty

    8 $@3: %empty

    9 $@4: %empty

   10 Function: tVOID tID tPO $@2 DecArgs $@3 tPF tAO $@4 Body tAF

   11 Return: tRETURN tID tPV
   12       | %empty

   13 $@5: %empty

   14 $@6: %empty

   15 FunCall: tID tPO $@5 CallArgs $@6 tPF tPV

   16 $@7: %empty

   17 DecArgs: tINT tID $@7 NextDecArg
   18        | %empty

   19 NextDecArg: tV DecArgs
   20           | %empty

   21 $@8: %empty

   22 CallArgs: tID $@8 CallArgNext
   23         | tNB CallArgNext
   24         | %empty

   25 CallArgNext: tV CallArgs
   26            | %empty

   27 Type: tCONST
   28     | %empty

   29 Body: Instructions

   30 Instructions: Instruction Instructions
   31             | %empty

   32 Instruction: FunCall
   33            | Print
   34            | VarDeclarationAndAssign
   35            | VarDeclaration
   36            | VarAssign

   37 $@9: %empty

   38 $@10: %empty

   39 Instruction: ifCondition tAO $@9 Body tAF $@10 elseCondition

   40 $@11: %empty

   41 Instruction: whileCondition tAO $@11 Body tAF

   42 Print: tPRINT tPO PrintArg tPF tPV

   43 PrintArg: tID
   44         | tNB

   45 VarDeclarationAndAssign: Type tINT tID tEQUAL tNB tPV
   46                        | Type tINT tID tEQUAL tID tPV

   47 $@12: %empty

   48 VarDeclaration: Type tINT tID $@12 NextVar

   49 $@13: %empty

   50 NextVar: Type tV tID $@13 NextVar
   51        | tPV

   52 Operand: FunCall
   53        | Operations
   54        | tID
   55        | tNB

   56 Operations: Operand tADD Operand
   57           | Operand tSUB Operand
   58           | Operand tMUL Operand
   59           | Operand tDIV Operand

   60 VarAssign: tID tEQUAL Operand tPV

   61 $@14: %empty

   62 ifCondition: tIF tPO ifBoolExpression tPF $@14 elseCondition

   63 $@15: %empty

   64 elseCondition: tELSE tAO $@15 Body tAF
   65              | %empty

   66 whileCondition: tWHILE tPO whileBoolExpression tPF

   67 ifBoolExpression: ifComparaison
   68                 | tID
   69                 | tTRUE
   70                 | tFALSE

   71 ifComparaison: Operand tEQEQ Operand
   72              | Operand tINF Operand
   73              | Operand tSUP Operand

   74 whileBoolExpression: whileComparaison
   75                    | tID
   76                    | tTRUE
   77                    | tFALSE

   78 whileComparaison: Operand tEQEQ Operand
   79                 | Operand tINF Operand
   80                 | Operand tSUP Operand


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    tMAIN (258) 2
    tRETURN (259) 11
    tIF (260) 62
    tWHILE (261) 66
    tPRINT (262) 42
    tELSE (263) 64
    tAO (264) 2 6 10 39 41 64
    tAF (265) 2 6 10 39 41 64
    tPO (266) 2 6 10 15 42 62 66
    tPF (267) 2 6 10 15 42 62 66
    tV (268) 19 25 50
    tPV (269) 11 15 42 45 46 51 60
    tEQUAL (270) 45 46 60
    tVOID (271) 2 10
    tINT (272) 6 17 45 46 48
    tSTRING (273)
    tSUB (274) 57
    tADD (275) 56
    tMUL (276) 58
    tDIV (277) 59
    tINF (278) 72 79
    tSUP (279) 73 80
    tEQEQ (280) 71 78
    tTRUE (281) 69 76
    tFALSE (282) 70 77
    tCONST (283) 27
    tNB <nb> (284) 23 44 45 55
    tID <string> (285) 6 10 11 15 17 22 43 45 46 48 50 54 60 68 75


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    Main (33)
        on left: 2
        on right: 1
    Functions (34)
        on left: 3 4
        on right: 1 4
    Function (35)
        on left: 6 10
        on right: 3 4
    $@1 (36)
        on left: 5
        on right: 6
    $@2 (37)
        on left: 7
        on right: 10
    $@3 (38)
        on left: 8
        on right: 10
    $@4 (39)
        on left: 9
        on right: 10
    Return (40)
        on left: 11 12
        on right: 6
    FunCall (41)
        on left: 15
        on right: 32 52
    $@5 (42)
        on left: 13
        on right: 15
    $@6 (43)
        on left: 14
        on right: 15
    DecArgs (44)
        on left: 17 18
        on right: 6 10 19
    $@7 (45)
        on left: 16
        on right: 17
    NextDecArg (46)
        on left: 19 20
        on right: 17
    CallArgs (47)
        on left: 22 23 24
        on right: 15 25
    $@8 (48)
        on left: 21
        on right: 22
    CallArgNext (49)
        on left: 25 26
        on right: 22 23
    Type <nb> (50)
        on left: 27 28
        on right: 45 46 48 50
    Body (51)
        on left: 29
        on right: 2 6 10 39 41 64
    Instructions (52)
        on left: 30 31
        on right: 29 30
    Instruction (53)
        on left: 32 33 34 35 36 39 41
        on right: 30
    $@9 (54)
        on left: 37
        on right: 39
    $@10 (55)
        on left: 38
        on right: 39
    $@11 (56)
        on left: 40
        on right: 41
    Print (57)
        on left: 42
        on right: 33
    PrintArg (58)
        on left: 43 44
        on right: 42
    VarDeclarationAndAssign (59)
        on left: 45 46
        on right: 34
    VarDeclaration (60)
        on left: 48
        on right: 35
    $@12 (61)
        on left: 47
        on right: 48
    NextVar (62)
        on left: 50 51
        on right: 48 50
    $@13 (63)
        on left: 49
        on right: 50
    Operand (64)
        on left: 52 53 54 55
        on right: 56 57 58 59 60 71 72 73 78 79 80
    Operations (65)
        on left: 56 57 58 59
        on right: 53
    VarAssign (66)
        on left: 60
        on right: 36
    ifCondition (67)
        on left: 62
        on right: 39
    $@14 (68)
        on left: 61
        on right: 62
    elseCondition (69)
        on left: 64 65
        on right: 39 62
    $@15 (70)
        on left: 63
        on right: 64
    whileCondition (71)
        on left: 66
        on right: 41
    ifBoolExpression (72)
        on left: 67 68 69 70
        on right: 62
    ifComparaison (73)
        on left: 71 72 73
        on right: 67
    whileBoolExpression (74)
        on left: 74 75 76 77
        on right: 66
    whileComparaison (75)
        on left: 78 79 80
        on right: 74


State 0

    0 $accept: . Program $end

    tVOID  shift, and go to state 1

    Program  go to state 2
    Main     go to state 3


State 1

    2 Main: tVOID . tMAIN tPO tPF tAO Body tAF

    tMAIN  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: Main . Functions

    tVOID  shift, and go to state 6
    tINT   shift, and go to state 7

    Functions  go to state 8
    Function   go to state 9


State 4

    2 Main: tVOID tMAIN . tPO tPF tAO Body tAF

    tPO  shift, and go to state 10


State 5

    0 $accept: Program $end .

    $default  accept


State 6

   10 Function: tVOID . tID tPO $@2 DecArgs $@3 tPF tAO $@4 Body tAF

    tID  shift, and go to state 11


State 7

    6 Function: tINT . tID tPO DecArgs tPF tAO $@1 Body Return tAF

    tID  shift, and go to state 12


State 8

    1 Program: Main Functions .

    $default  reduce using rule 1 (Program)


State 9

    3 Functions: Function .
    4          | Function . Functions

    tVOID  shift, and go to state 6
    tINT   shift, and go to state 7

    $default  reduce using rule 3 (Functions)

    Functions  go to state 13
    Function   go to state 9


State 10

    2 Main: tVOID tMAIN tPO . tPF tAO Body tAF

    tPF  shift, and go to state 14


State 11

   10 Function: tVOID tID . tPO $@2 DecArgs $@3 tPF tAO $@4 Body tAF

    tPO  shift, and go to state 15


State 12

    6 Function: tINT tID . tPO DecArgs tPF tAO $@1 Body Return tAF

    tPO  shift, and go to state 16


State 13

    4 Functions: Function Functions .

    $default  reduce using rule 4 (Functions)


State 14

    2 Main: tVOID tMAIN tPO tPF . tAO Body tAF

    tAO  shift, and go to state 17


State 15

   10 Function: tVOID tID tPO . $@2 DecArgs $@3 tPF tAO $@4 Body tAF

    $default  reduce using rule 7 ($@2)

    $@2  go to state 18


State 16

    6 Function: tINT tID tPO . DecArgs tPF tAO $@1 Body Return tAF

    tINT  shift, and go to state 19

    $default  reduce using rule 18 (DecArgs)

    DecArgs  go to state 20


State 17

    2 Main: tVOID tMAIN tPO tPF tAO . Body tAF

    tIF     shift, and go to state 21
    tWHILE  shift, and go to state 22
    tPRINT  shift, and go to state 23
    tCONST  shift, and go to state 24
    tID     shift, and go to state 25

    tAF       reduce using rule 31 (Instructions)
    $default  reduce using rule 28 (Type)

    FunCall                  go to state 26
    Type                     go to state 27
    Body                     go to state 28
    Instructions             go to state 29
    Instruction              go to state 30
    Print                    go to state 31
    VarDeclarationAndAssign  go to state 32
    VarDeclaration           go to state 33
    VarAssign                go to state 34
    ifCondition              go to state 35
    whileCondition           go to state 36


State 18

   10 Function: tVOID tID tPO $@2 . DecArgs $@3 tPF tAO $@4 Body tAF

    tINT  shift, and go to state 19

    $default  reduce using rule 18 (DecArgs)

    DecArgs  go to state 37


State 19

   17 DecArgs: tINT . tID $@7 NextDecArg

    tID  shift, and go to state 38


State 20

    6 Function: tINT tID tPO DecArgs . tPF tAO $@1 Body Return tAF

    tPF  shift, and go to state 39


State 21

   62 ifCondition: tIF . tPO ifBoolExpression tPF $@14 elseCondition

    tPO  shift, and go to state 40


State 22

   66 whileCondition: tWHILE . tPO whileBoolExpression tPF

    tPO  shift, and go to state 41


State 23

   42 Print: tPRINT . tPO PrintArg tPF tPV

    tPO  shift, and go to state 42


State 24

   27 Type: tCONST .

    $default  reduce using rule 27 (Type)


State 25

   15 FunCall: tID . tPO $@5 CallArgs $@6 tPF tPV
   60 VarAssign: tID . tEQUAL Operand tPV

    tPO     shift, and go to state 43
    tEQUAL  shift, and go to state 44


State 26

   32 Instruction: FunCall .

    $default  reduce using rule 32 (Instruction)


State 27

   45 VarDeclarationAndAssign: Type . tINT tID tEQUAL tNB tPV
   46                        | Type . tINT tID tEQUAL tID tPV
   48 VarDeclaration: Type . tINT tID $@12 NextVar

    tINT  shift, and go to state 45


State 28

    2 Main: tVOID tMAIN tPO tPF tAO Body . tAF

    tAF  shift, and go to state 46


State 29

   29 Body: Instructions .

    $default  reduce using rule 29 (Body)


State 30

   30 Instructions: Instruction . Instructions

    tIF     shift, and go to state 21
    tWHILE  shift, and go to state 22
    tPRINT  shift, and go to state 23
    tCONST  shift, and go to state 24
    tID     shift, and go to state 25

    tINT      reduce using rule 28 (Type)
    $default  reduce using rule 31 (Instructions)

    FunCall                  go to state 26
    Type                     go to state 27
    Instructions             go to state 47
    Instruction              go to state 30
    Print                    go to state 31
    VarDeclarationAndAssign  go to state 32
    VarDeclaration           go to state 33
    VarAssign                go to state 34
    ifCondition              go to state 35
    whileCondition           go to state 36


State 31

   33 Instruction: Print .

    $default  reduce using rule 33 (Instruction)


State 32

   34 Instruction: VarDeclarationAndAssign .

    $default  reduce using rule 34 (Instruction)


State 33

   35 Instruction: VarDeclaration .

    $default  reduce using rule 35 (Instruction)


State 34

   36 Instruction: VarAssign .

    $default  reduce using rule 36 (Instruction)


State 35

   39 Instruction: ifCondition . tAO $@9 Body tAF $@10 elseCondition

    tAO  shift, and go to state 48


State 36

   41 Instruction: whileCondition . tAO $@11 Body tAF

    tAO  shift, and go to state 49


State 37

   10 Function: tVOID tID tPO $@2 DecArgs . $@3 tPF tAO $@4 Body tAF

    $default  reduce using rule 8 ($@3)

    $@3  go to state 50


State 38

   17 DecArgs: tINT tID . $@7 NextDecArg

    $default  reduce using rule 16 ($@7)

    $@7  go to state 51


State 39

    6 Function: tINT tID tPO DecArgs tPF . tAO $@1 Body Return tAF

    tAO  shift, and go to state 52


State 40

   62 ifCondition: tIF tPO . ifBoolExpression tPF $@14 elseCondition

    tTRUE   shift, and go to state 53
    tFALSE  shift, and go to state 54
    tNB     shift, and go to state 55
    tID     shift, and go to state 56

    FunCall           go to state 57
    Operand           go to state 58
    Operations        go to state 59
    ifBoolExpression  go to state 60
    ifComparaison     go to state 61


State 41

   66 whileCondition: tWHILE tPO . whileBoolExpression tPF

    tTRUE   shift, and go to state 62
    tFALSE  shift, and go to state 63
    tNB     shift, and go to state 55
    tID     shift, and go to state 64

    FunCall              go to state 57
    Operand              go to state 65
    Operations           go to state 59
    whileBoolExpression  go to state 66
    whileComparaison     go to state 67


State 42

   42 Print: tPRINT tPO . PrintArg tPF tPV

    tNB  shift, and go to state 68
    tID  shift, and go to state 69

    PrintArg  go to state 70


State 43

   15 FunCall: tID tPO . $@5 CallArgs $@6 tPF tPV

    $default  reduce using rule 13 ($@5)

    $@5  go to state 71


State 44

   60 VarAssign: tID tEQUAL . Operand tPV

    tNB  shift, and go to state 55
    tID  shift, and go to state 72
